--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <nav class="nav">
             <div class="nav__logotype">
                 <span class="nav__logo">w</span>
-                <button class="nav__hamburger">
+                <div class="nav__hamburger">
                     <div class="nav__hamburger-line"></div>
                     <div class="nav__hamburger-line"></div>
                     <div class="nav__hamburger-line"></div>
-                </button>
+                </div>
             </div>
             <ul class="nav__items">
                 <li class="nav__cards nav--home">
@@ -43,11 +43,11 @@
         <header class="header">
             <div class="header__main">
                 <div class="header__tabs header__tabs-padding">
-                    <button class="header__ellipse">
+                    <div class="header__ellipse">
                         <div class="main__header-circle main__header-circle-color"></div>
                         <div class="main__header-circle main__header-circle-color"></div>
                         <div class="main__header-circle main__header-circle-color"></div>
-                    </button>
+                    </div>
                 </div>
                 <div class="header__tabs header--folder"></div>
                 <div class="header__tabs header--settings"></div>
@@ -64,11 +64,11 @@
                     <p class="header__function">Cheif Authority</p>
                 </div>
                 <div class="header__tabs header__tabs-settings-padding">
-                    <button class="main__header-settings">
+                    <div class="main__header-settings">
                         <div class="main__header-circle"></div>
                         <div class="main__header-circle"></div>
                         <div class="main__header-circle"></div>
-                    </button>
+                    </div>
                 </div>
             </div>
             <div class="header__footer">
@@ -135,19 +135,19 @@
         </header>
         <!-- section -->
         <section class="section">
-            <main  class="main">
+            <div class="main">
                 <div class="main__header">
                     <div class="main__header-header">
-                        <p class="main__names">Mountly revenue progress</p>
+                        <h2 class="main__names">Mountly revenue progress</h2>
                         <div class="main__header-aside">
                             <p class="main__header-span">Month</p>
                             <p class="main__header-span">Day</p>
                             <p class="main__header-span">Year</p>
-                            <button class="main__header-settings">
+                            <div class="main__header-settings">
                                 <div class="main__header-circle"></div>
                                 <div class="main__header-circle"></div>
                                 <div class="main__header-circle"></div>
-                            </button>
+                            </div>
                         </div>
                     </div>
                     <div class="main__graphics">
@@ -157,7 +157,7 @@
                             <p class="main__axis-y">200k</p>
                             <p class="main__axis-y">100k</p>
                         </div>
-                        <img class="main__graphics-graphics" src="/source/img/jpg/graphic.jpg" alt="">
+                        <img class="main__graphics-graphics" src="./source/img/jpg/graphic.jpg" alt="">
                         <div class="main__graphics-axis-x">
                             <p class="main__axis-x">Jan</p>
                             <p class="main__axis-x">Feb</p>
@@ -175,8 +175,8 @@
                     </div>
                 </div>
                 <div class="main__card">
-                    <p class="main__names">Revenue per our</p>
-                    <img class="main__card-size" src="/source/img/jpg/revenue.jpg" alt="">
+                    <h2 class="main__names">Revenue per our</h2>
+                    <img class="main__card-size" src="./source/img/jpg/revenue.jpg" alt="">
                     <p class="main__text">&#160;</p>
                     <div class="main__span-text">
                         <div class="main__span-high">1020</div>
@@ -184,10 +184,10 @@
                     </div>
                 </div>
                 <div class="main__footer">
-                    <p class="main__names">Customers feed</p>
+                    <h2 class="main__names">Customers feed</h2>
                     <div class="main__footer-bloks">  
                         <div class="main__footer-card">
-                            <img src="/source/img/jpg/sophie.svg" width="45" height="45" alt="">
+                            <img src="./source/img/jpg/sophie.svg" width="45" height="45" alt="">
                             <p class="main__footer-text">10 min ago</p>
                         </div>
                         <p class="main__footer-span"><span class="main__footer-span-select">Sophie turner</span> is simply dummy text of the printing and type settings industry. Lorem ipsumhas been the industrys standart dummy text ever since the 1500s, when an</p>
@@ -202,7 +202,7 @@
                     </div>
                     <div class="main__footer-bloks">  
                         <div class="main__footer-card">
-                            <img src="/source/img/jpg/peter.svg" width="45" height="45" alt="">
+                            <img src="./source/img/jpg/peter.svg" width="45" height="45" alt="">
                             <p class="main__footer-text">15 min ago</p>
                         </div>
                         <p class="main__footer-span"><span class="main__footer-span-select">Peter quill</span> is simply dummy text of the printing and type settings industry. Lorem ipsumhas been the industrys standart dummy text ever since the 1500s, when an</p>
@@ -210,7 +210,7 @@
                 </div>
                 <div class="main__inner">
                     <div class="main__todo">
-                        <p class="main__names">Today task</p>
+                        <h2 class="main__names">Today task</h2>
                         <div class="main__inner-todo">
                             <div class="main__inner-blocks">
                                 <span class="main__inner-blocks-circle"></span>
@@ -243,8 +243,8 @@
                         </div>
                     </div>
                     <div class="main__card main__card-margin">
-                        <p class="main__names">Progress</p>
-                        <img class="main__card-size" src="/source/img/jpg/progress.jpg" alt="">
+                        <h2 class="main__names">Progress</h2>
+                        <img class="main__card-size" src="./source/img/jpg/progress.jpg" alt="">
                         <p class="main__text main__text-color">$150,0000</p>
                         <div class="main__span-text">
                             <div class="main__span-high">1020</div>
@@ -252,8 +252,8 @@
                         </div>
                     </div>
                     <div class="main__card main__card-margin">
-                        <p class="main__names">Shipments</p>
-                        <img class="main__card-size" src="/source/img/jpg/shipments.jpg" alt="">
+                        <h2 class="main__names">Shipments</h2>
+                        <img class="main__card-size" src="./source/img/jpg/shipments.jpg" alt="">
                         <div class="main__card-footer">
                             <p class="main__text">$15,000</p>
                             <div class="main__span-text main__span-text-margin">
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                 </div>
-            </main>
+            </div>
             <!-- aside -->
             <aside class="aside">
                 <div class="aside__menu">
@@ -273,52 +273,52 @@
                 </div>
                 <div class="aside__cards">
                     <div class="aside__cards-block">
-                        <img src="/source/img/jpg/jennifer.svg" alt="">
+                        <img src="./source/img/jpg/jennifer.svg" alt="">
                         <div class="aside__titles">
                             <p class="header__names">Jennifer Lawrence</p>
                             <p class="header__function">Cheif Authority</p>
                         </div>  
-                        <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
+                        <img class="aside__chat" src="./source/img/bar_icons/chat.svg" alt="">
                     </div>
                     <div class="aside__cards-block">
-                        <img src="/source/img/jpg/brad.svg" alt="">
+                        <img src="./source/img/jpg/brad.svg" alt="">
                         <div class="aside__titles">
                             <p class="header__names">Brad Pitt</p>
                             <p class="header__function">Cheif Authority</p>
                         </div>  
-                        <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
+                        <img class="aside__chat" src="./source/img/bar_icons/chat.svg" alt="">
                     </div>
                     <div class="aside__cards-block">
-                        <img src="/source/img/jpg/leonardo.svg" alt="">
+                        <img src="./source/img/jpg/leonardo.svg" alt="">
                         <div class="aside__titles">
                             <p class="header__names">Leonardo Dicaprio</p>
                             <p class="header__function">Cheif Authority</p>
                         </div>  
-                        <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
+                        <img class="aside__chat" src="./source/img/bar_icons/chat.svg" alt="">
                     </div>
                     <div class="aside__cards-block">
-                        <img src="/source/img/jpg/jesse.svg" alt="">
+                        <img src="./source/img/jpg/jesse.svg" alt="">
                         <div class="aside__titles">
                             <p class="header__names">Jesse Eisenberg</p>
                             <p class="header__function">Cheif Authority</p>
                         </div>  
-                        <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
+                        <img class="aside__chat" src="./source/img/bar_icons/chat.svg" alt="">
                     </div>
                     <div class="aside__cards-block">
-                        <img src="/source/img/jpg/kristen.svg" alt="">
+                        <img src="./source/img/jpg/kristen.svg" alt="">
                         <div class="aside__titles">
                             <p class="header__names">Kristen Stewart</p>
                             <p class="header__function">Cheif Authority</p>
                         </div>  
-                        <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
+                        <img class="aside__chat" src="./source/img/bar_icons/chat.svg" alt="">
                     </div>
                     <div class="aside__cards-block">
-                        <img src="/source/img/jpg/ben.svg" alt="">
+                        <img src="./source/img/jpg/ben.svg" alt="">
                         <div class="aside__titles">
                             <p class="header__names">Ben Affleck</p>
                             <p class="header__function">Cheif Authority</p>
                         </div>  
-                        <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
+                        <img class="aside__chat" src="./source/img/bar_icons/chat.svg" alt="">
                     </div>
                 </div>
                 <div class="aside__field">
@@ -330,22 +330,22 @@
                     <p class="aside__header">Featured Companys</p>
                     <div class="aside__socials">
                         <a class="aside__round aside__round-gradient-o" href="#">
-                            <img src="/source/img/footer_icons/o.svg" alt="" >
+                            <img src="./source/img/footer_icons/o.svg" alt="" >
                         </a>
                         <a class="aside__round aside__round-gradient-e" href="#">
-                            <img src="/source/img/footer_icons/e.svg" alt="" >
+                            <img src="./source/img/footer_icons/e.svg" alt="" >
                         </a>
                         <a class="aside__round aside__round-gradient-z" href="#">
-                            <img src="/source/img/footer_icons/z.svg" alt="" >
+                            <img src="./source/img/footer_icons/z.svg" alt="" >
                         </a>
                         <a class="aside__round aside__round-gradient-x" href="#">
-                            <img src="/source/img/footer_icons/x.svg" alt="" >
+                            <img src="./source/img/footer_icons/x.svg" alt="" >
                         </a>
                         <a class="aside__round aside__round-gradient-v" href="#">
-                            <img src="/source/img/footer_icons/v.svg" alt="" >
+                            <img src="./source/img/footer_icons/v.svg" alt="" >
                         </a>
                         <a class="aside__round aside__round-gradient-vk" href="#">
-                            <img src="/source/img/footer_icons/vk.svg" alt="" >
+                            <img src="./source/img/footer_icons/vk.svg" alt="" >
                         </a>
                     </div>
                 </div>
